@@ -1,5 +1,7 @@
 package com.leone.boot.common.util;
 
+import cn.hutool.core.util.IdUtil;
+import cn.hutool.core.util.RandomUtil;
 import com.leone.boot.common.entity.Order;
 import com.leone.boot.common.entity.User;
 
@@ -23,9 +25,9 @@ public class EntityFactory {
     static {
         for (long i = 0; i < 100; i++) {
             Date date = new Date(new Date().getTime() - (random.nextInt(1000000) + 1000000));
-            userList.add(new User(i, RandomUtils.randomUsername(), RandomUtils.randomStr(16), RandomUtils.randomMessage(), RandomUtils.random.nextInt(50) + 10, date, false));
-            orderList.add(new Order(i, i, random.nextInt(1000) + 200, "Chicken and fish", 1 + RandomUtils.randomNum(15), date, date, false));
-            orderList.add(new Order(i, i, random.nextInt(100) + 200, "some apple and orange", 1 + RandomUtils.randomNum(15), date, date, false));
+            userList.add(new User(i, RandomUtils.randomUsername(), IdUtil.nanoId(), RandomUtil.randomString(12), RandomUtils.random.nextInt(50) + 10, date, false));
+            orderList.add(new Order(i, i, random.nextInt(1000) + 200, "Chicken and fish", IdUtil.nanoId(8), date, date, false));
+            orderList.add(new Order(i, i, random.nextInt(100) + 200, "some apple and orange", IdUtil.nanoId(8), date, date, false));
         }
     }
 
@@ -35,17 +37,17 @@ public class EntityFactory {
             return Collections.emptyList();
         }
         for (long i = 0; i < count; i++) {
-            userList.add(new User(i, RandomUtils.randomUsername(), RandomUtils.randomStr(16), RandomUtils.randomMessage(), RandomUtils.random.nextInt(50) + 10, new Date(), false));
+            userList.add(new User(i, RandomUtils.randomUsername(), IdUtil.nanoId(), RandomUtil.randomString(12), RandomUtils.random.nextInt(50) + 10, new Date(), false));
         }
         return userList;
     }
 
     public static User getUser() {
-        return new User(RandomUtils.random.nextLong(), RandomUtils.randomUsername(), RandomUtils.randomStr(16), RandomUtils.randomMessage(), RandomUtils.random.nextInt(50) + 10, new Date(), false);
+        return new User(RandomUtils.random.nextLong(), RandomUtils.randomUsername(), IdUtil.nanoId(), RandomUtil.randomString(12), RandomUtils.random.nextInt(50) + 10, new Date(), false);
     }
 
     public static User getUser(Long userId) {
-        return userList.stream().filter(e -> e.getUserId().equals(userId)).collect(Collectors.toList()).get(0);
+        return userList.stream().filter(e -> e.getUserId().equals(userId)).toList().get(0);
     }
 
     public static void remove(Long userId) {
